# SBAI

./: .gitignore  analyze_dimensions.py  analyze_views.py  generate_pipe_bom_excel.py  generate_valve_excel.py  pipe_bom_data.json  render_dxf.py  render_views.py  render_with_dims.py  run_full_vlm.py  valve_data.json
webapp/: .gitignore  docker-compose.yml
webapp/backend/: Dockerfile  pyproject.toml
webapp/backend/app/: main.py
webapp/backend/app/core/: config.py  llm_client.py
webapp/backend/app/routers/: chat.py  download.py  results.py  symbols.py  upload.py
webapp/backend/app/services/: bom_comparison_service.py  chatbot_service.py  db_service.py  dxf_service.py  excel_service.py  pid_service.py  pid_vlm_service.py  pipe_bom_service.py  symbol_db_service.py  vlm_bom_service.py
webapp/deploy/: deploy-vm.sh  deploy.sh
webapp/frontend/: Dockerfile  index.html  nginx.conf  nginx.oci.conf  nginx.vm.conf  package-lock.json  package.json  vite.config.ts
webapp/frontend/src/: App.tsx
webapp/frontend/src/pages/: ChatPage.tsx  ResultsPage.tsx  UploadPage.tsx
webapp/frontend/src/styles/: globals.css
